; ModuleID = '/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/hardware/video/extr_svga.c_VgaEnterNewMode.c'
source_filename = "/home/carl/AnghaBench/reactos/subsystems/mvdm/ntvdm/hardware/video/extr_svga.c_VgaEnterNewMode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TEXT_MODE = common dso_local global i64 0, align 8
@TextPaletteHandle = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [75 x i32] [i32 65, i32 110, i32 32, i32 117, i32 110, i32 101, i32 120, i32 112, i32 101, i32 99, i32 116, i32 101, i32 100, i32 32, i32 86, i32 71, i32 65, i32 32, i32 101, i32 114, i32 114, i32 111, i32 114, i32 32, i32 111, i32 99, i32 99, i32 117, i32 114, i32 114, i32 101, i32 100, i32 32, i32 119, i32 104, i32 105, i32 108, i32 101, i32 32, i32 115, i32 119, i32 105, i32 116, i32 99, i32 104, i32 105, i32 110, i32 103, i32 32, i32 105, i32 110, i32 116, i32 111, i32 32, i32 116, i32 101, i32 120, i32 116, i32 32, i32 109, i32 111, i32 100, i32 101, i32 46, i32 32, i32 69, i32 114, i32 114, i32 111, i32 114, i32 58, i32 32, i32 37, i32 117, i32 0], align 4
@FALSE = common dso_local global i32 0, align 4
@TextFramebuffer = common dso_local global i32 0, align 4
@ActiveFramebuffer = common dso_local global i32 0, align 4
@ScreenMode = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@PaletteHandle = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [79 x i32] [i32 65, i32 110, i32 32, i32 117, i32 110, i32 101, i32 120, i32 112, i32 101, i32 99, i32 116, i32 101, i32 100, i32 32, i32 86, i32 71, i32 65, i32 32, i32 101, i32 114, i32 114, i32 111, i32 114, i32 32, i32 111, i32 99, i32 99, i32 117, i32 114, i32 114, i32 101, i32 100, i32 32, i32 119, i32 104, i32 105, i32 108, i32 101, i32 32, i32 115, i32 119, i32 105, i32 116, i32 99, i32 104, i32 105, i32 110, i32 103, i32 32, i32 105, i32 110, i32 116, i32 111, i32 32, i32 103, i32 114, i32 97, i32 112, i32 104, i32 105, i32 99, i32 115, i32 32, i32 109, i32 111, i32 100, i32 101, i32 46, i32 32, i32 69, i32 114, i32 114, i32 111, i32 114, i32 58, i32 32, i32 37, i32 117, i32 0], align 4
@GraphicsFramebuffer = common dso_local global i32 0, align 4
@GRAPHICS_MODE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i32)* @VgaEnterNewMode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @VgaEnterNewMode(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i64, i64* %4, align 8
  %7 = load i64, i64* @TEXT_MODE, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %23

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @TextPaletteHandle, align 4
  %12 = call i32 @VgaConsoleCreateTextScreen(i32 %10, i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %9
  %15 = call i32 (...) @GetLastError()
  %16 = call i32 @DisplayMessage(i8* bitcast ([75 x i32]* @.str to i8*), i32 %15)
  %17 = call i32 (...) @EmulatorTerminate()
  %18 = load i32, i32* @FALSE, align 4
  store i32 %18, i32* %3, align 4
  br label %37

19:                                               ; preds = %9
  %20 = load i32, i32* @TextFramebuffer, align 4
  store i32 %20, i32* @ActiveFramebuffer, align 4
  %21 = load i64, i64* @TEXT_MODE, align 8
  store i64 %21, i64* @ScreenMode, align 8
  %22 = load i32, i32* @TRUE, align 4
  store i32 %22, i32* %3, align 4
  br label %37

23:                                               ; preds = %2
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* @PaletteHandle, align 4
  %26 = call i32 @VgaConsoleCreateGraphicsScreen(i32 %24, i32 %25)
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %33, label %28

28:                                               ; preds = %23
  %29 = call i32 (...) @GetLastError()
  %30 = call i32 @DisplayMessage(i8* bitcast ([79 x i32]* @.str.1 to i8*), i32 %29)
  %31 = call i32 (...) @EmulatorTerminate()
  %32 = load i32, i32* @FALSE, align 4
  store i32 %32, i32* %3, align 4
  br label %37

33:                                               ; preds = %23
  %34 = load i32, i32* @GraphicsFramebuffer, align 4
  store i32 %34, i32* @ActiveFramebuffer, align 4
  %35 = load i64, i64* @GRAPHICS_MODE, align 8
  store i64 %35, i64* @ScreenMode, align 8
  %36 = load i32, i32* @TRUE, align 4
  store i32 %36, i32* %3, align 4
  br label %37

37:                                               ; preds = %33, %28, %19, %14
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i32 @VgaConsoleCreateTextScreen(i32, i32) #1

declare dso_local i32 @DisplayMessage(i8*, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @EmulatorTerminate(...) #1

declare dso_local i32 @VgaConsoleCreateGraphicsScreen(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
